# Lighthouse-touch-bridge

./: .editorconfig  .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  Directory.Build.props  LighthouseTouchBridge.sln  NOTICE  README.md
.agents/: README.md  agent_files.config
.agents/.agent-files/: sync-state.tsv
.agents/docs/: AGENT_FILES_REGISTRY.md  AGENT_ORCHESTRATION.md  ARTIFACT_STORAGE_POLICY.md  AUTONOMOUS_ISSUE_FEEDBACK.md  AUTONOMOUS_O2_EXECUTION.md  BITWARDEN_AGENT_ACCESS.md  CORE_AGENT_SKILLS.md  CORE_SKILL_BASELINE.md  PROFILE_SEED.md  PROJECT_RULES.md  RUNTIME_MODEL_POLICY_SHARED.md  TECHNICAL_WRITING_PEDAGOGY.md  WEB_ACCESS_BROWSER_AUTOMATION.md
.agents/research/: NOTE_TEMPLATE.md  README.md
.agents/scripts/: check-human-authorship  install-human-authorship-guard  maco  o2-autopilot  run-with-bitwarden
.agents/workflows/: AGENT_ORCHESTRATION_WORKFLOW.md  AUTONOMOUS_O2_EXECUTION_WORKFLOW.md  HANDOFF_WORKFLOW.md
.github/workflows/: build-internal-drivers.yml
docs/: architecture.md  calibration.md  driver-evaluation.md  internal-drivers.md  setup.md  specification.md  troubleshooting.md  windows-internal-driver-verification.md  windows-verification.md
native/driver_ltb/: CMakeLists.txt  README.md
native/driver_ltb/cmake/: build-id.txt.in  build_identity.hpp.in
native/driver_ltb/driver/: driver.vrdrivermanifest
native/driver_ltb/driver/resources/input/: legacy_bindings_ltb_touch.json  ltb_touch_profile.json  ltb_touch_remapping.json
native/driver_ltb/driver/resources/input/bindings/: bindings_ltb_touch_vrchat.json
native/driver_ltb/driver/resources/localization/: localization.json
native/driver_ltb/driver/resources/settings/: default.vrsettings
native/driver_ltb/include/ltb_driver/: controller_input_policy.hpp  peer_session.hpp  protocol.hpp  retry_backoff.hpp  state_store.hpp
native/driver_ltb/src/core/: peer_session.cpp  protocol.cpp  state_store.cpp
native/driver_ltb/src/openvr/: controller_device.cpp  controller_device.hpp  device_provider.cpp  device_provider.hpp  hmd_driver_factory.cpp  monotonic_clock.hpp  named_pipe_receiver.cpp  named_pipe_receiver.hpp
native/driver_ltb/tests/: build_identity_tests.cpp  check_pe_imports_tests.py  core_tests.cpp  retry_backoff_tests.cpp
native/driver_ltb/tests/fixtures/: not-a-pe.txt
native/driver_ltb/tools/: check_pe_imports.py
src/Ltb.Alvr/: AlvrAvailabilityProbe.cs  Ltb.Alvr.csproj  ProjectMarker.cs
src/Ltb.App/: AlvrAvailabilityProbe.cs  BridgeProfile.cs  CalibrationWizardBackend.cs  InternalDriverCalibration.cs  InternalDriverHandStateComposer.cs  InternalDriverInputMapper.cs  InternalDriverLoadedReadiness.cs  InternalDriverMonotonicDeadlineScheduler.cs  InternalDriverProfileStoreCommitGate.cs  InternalDriverRemoval.cs  InternalDriverSession.cs  InternalDriverSessionContracts.cs  InternalDriverSessionFactory.cs  InternalDriverTrackerBatchSampler.cs  Ltb.App.csproj  MetaLinkCalibrationCapture.cs  OneHandBridgeCoordinator.cs  OneHandBridgeProductionAdapters.cs  ProductionCalibrationWizardRuntime.cs  ProductionCalibrationWizardSession.cs  ProductionReliableDailyUseRuntime.cs  Program.cs  ReliableDailyUseCoordinator.cs  ScriptedCalibrationWizardRuntime.cs  TwoHandCalibrationWizard.cs  TwoHandProfileApplicationTransaction.cs  VmtPoseMatchSafety.cs
src/Ltb.Calibration/: CalibrationHand.cs  CalibrationModels.cs  HandEyeCalibrationSolver.cs  Ltb.Calibration.csproj  MotionAxisCoverage.cs  MotionCoverage.cs  PerHandCalibrationPipeline.cs  ProjectMarker.cs  RecordingReplay.cs  StreamTimeAlignment.cs  TrackerAssociation.cs
src/Ltb.Configuration/: AtomicFileWriter.cs  CalibrationProfile.cs  CalibrationProfileFile.cs  CalibrationProfileFormatException.cs  CalibrationProfileJson.cs  CalibrationProfileMigration.cs  CalibrationProfileStore.cs  DriverRegistrationReceiptStore.cs  InternalDriverSettings.cs  InternalDriverSettingsFile.cs  InternalDriverSettingsFormatException.cs  InternalDriverSettingsJson.cs  ProjectMarker.cs  RecalibrationEvaluator.cs
src/Ltb.Core/: CoordinateConventions.cs  PoseRecording.cs  PoseSamples.cs  PoseStreamBuffer.cs  ProjectMarker.cs  RigidTransform.cs  RuntimeReliability.cs
src/Ltb.Driver/: DriverFeed.cs  DriverFeedAbstractions.cs  DriverFeedModels.cs  Ltb.Driver.csproj  NamedPipeDriverTransport.cs  NamedPipePeerSessionVerifier.cs  SteamVrDriverLifecycle.cs  SteamVrDriverLifecycleAbstractions.cs  SteamVrDriverLifecycleModels.cs  SteamVrPathDiscovery.cs  SystemDriverFeedClock.cs  SystemSteamVrDriverLifecycleAdapters.cs
src/Ltb.Gui/: App.axaml  App.axaml.cs  CalibrationWizardSessionFactory.cs  GuiCommandLineOptions.cs  InternalDriverSessionFactory.cs  Ltb.Gui.csproj  MainWindow.axaml  MainWindow.axaml.cs  Program.cs  ScriptedCalibrationWizardSession.cs
src/Ltb.MetaLink/: ClockMapping.cs  Contracts.cs  FakeMetaLinkRuntime.cs  Ltb.MetaLink.csproj  MetaLinkRuntime.cs  OvrInputMapper.cs  ReconnectPolicy.cs
src/Ltb.OpenVr/: ActiveHmdReadiness.cs  DeviceDiscovery.cs  Ltb.OpenVr.csproj  OpenVrAdapters.cs  OpenVrDevicePath.cs  OpenVrRuntimeContracts.cs  OpenVrRuntimeHealth.cs  OpenVrSession.cs  OpenVrTrackingUniverse.cs  OpenVrUnavailableException.cs  PoseRecordingCapture.cs  PoseSources.cs  ProjectMarker.cs  Simulation.cs  SteamVrDeviceCapabilities.cs  SteamVrInputDeviceClassifier.cs  SteamVrSettingsManager.cs  SteamVrSettingsRecoveryPoint.cs  TrackingOverrideBinding.cs  ValveOpenVrRuntime.cs
src/Ltb.Protocol/: ProtocolAcceptanceTracker.cs  ProtocolCodec.cs  ProtocolConstants.cs  ProtocolException.cs  ProtocolModels.cs  ProtocolValidation.cs
src/Ltb.Vmt/: ProjectMarker.cs  VmtClient.cs  VmtDatagramTransport.cs  VmtDeviceConfiguration.cs  VmtDriverHealth.cs  VmtOscProtocol.cs  VmtTransformConvention.cs
tests/Ltb.Calibration.Tests/: CalibrationDegeneracyTests.cs  CoordinateConventionTests.cs  HandEyeCalibrationSolverTests.cs  LagEstimationAcceptanceTests.cs  Ltb.Calibration.Tests.csproj  MotionCoverageTests.cs  PerHandCalibrationPipelineTests.cs  PlaceholderTests.cs  PoseRecordingTests.cs  StreamTimeAlignmentTests.cs  SyntheticCalibrationTests.cs  (+2 more)
(+130 files in other folders)
